force-app/main/default/objects/LLC_BI__Spread_Statement_Period__c/LLC_BI__Spread_Statement_Period__c.object-meta.xml
<CustomObject>
    <label>Spread Statement Period</label>
    <nameField>
        <displayFormat>SSP-{000000000}</displayFormat>
        <label>Spread Statement Period Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Spread Statement Period</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>