force-app/main/default/objects/LLC_BI__Spread_Statement_Period__c/fields/LLC_BI__Exchange_Rate__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Exchange_Rate__c</fullName>
    <description>Users populate this optional text field to display an exchange rate between the source currency and the converted values. By default, it is blank.</description>
    <label>Exchange Rate</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>