force-app/main/default/objects/LLC_BI__Spread_Statement_Period__c/fields/Projected_Date__c.field-meta.xml
<CustomField>
    <fullName>Projected_Date__c</fullName>
    <label>Projected Date</label>
    <type>Date</type>
</CustomField>